[package]
name = "atcoder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "practice2a"
path = "practice2/a.rs"

[[bin]]
name = "abc461_a"
path = "abc461/a.rs"

[[bin]]
name = "abc461_b"
path = "abc461/b.rs"

[[bin]]
name = "abc461_c"
path = "abc461/c.rs"

[[bin]]
name = "abc461_d"
path = "abc461/d.rs"

[[bin]]
name = "abc461_e"
path = "abc461/e.rs"

[[bin]]
name = "abc461_f"
path = "abc461/f.rs"

[[bin]]
name = "abc460_a"
path = "abc460/a.rs"

[[bin]]
name = "abc460_b"
path = "abc460/b.rs"
