[package]
name = "atcoder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "abc460_a"
path = "abc460/a.rs"

[[bin]]
name = "abc460_b"
path = "abc460/b.rs"

[[bin]]
name = "abc460_c"
path = "abc460/c.rs"

[[bin]]
name = "abc460_d"
path = "abc460/d.rs"

[[bin]]
name = "abc460_e"
path = "abc460/e.rs"

[[bin]]
name = "abc460_f"
path = "abc460/f.rs"

[[bin]]
name = "practice2a"
path = "practice2/a.rs"

[[bin]]
name = "abc461_a"
path = "abc461/a.rs"

[[bin]]
name = "abc461_b"
path = "abc461/b.rs"

[[bin]]
name = "abc461_c"
path = "abc461/c.rs"

[[bin]]
name = "abc461_d"
path = "abc461/d.rs"

[[bin]]
name = "abc461_e"
path = "abc461/e.rs"

[[bin]]
name = "abc461_f"
path = "abc461/f.rs"

[[bin]]
name = "abc463_a"
path = "abc463/a.rs"

[[bin]]
name = "abc463_b"
path = "abc463/b.rs"

[[bin]]
name = "abc463_c"
path = "abc463/c.rs"

[[bin]]
name = "abc463_d"
path = "abc463/d.rs"

[[bin]]
name = "abc463_e"
path = "abc463/e.rs"

[[bin]]
name = "abc465_a"
path = "abc465/a.rs"

[[bin]]
name = "abc465_b"
path = "abc465/b.rs"

[[bin]]
name = "abc465_c"
path = "abc465/c.rs"

[[bin]]
name = "abc465_d"
path = "abc465/d.rs"

[[bin]]
name = "abc465_e"
path = "abc465/e.rs"

[[bin]]
name = "abc465_f"
path = "abc465/f.rs"

[[bin]]
name = "abc466_a"
path = "abc466/a.rs"

[[bin]]
name = "abc466_b"
path = "abc466/b.rs"

[[bin]]
name = "abc466_c"
path = "abc466/c.rs"

[[bin]]
name = "abc466_d"
path = "abc466/d.rs"

[[bin]]
name = "abc466_e"
path = "abc466/e.rs"

[[bin]]
name = "abc466_f"
path = "abc466/f.rs"

[[bin]]
name = "abc467_a"
path = "abc467/a.rs"

[[bin]]
name = "abc467_b"
path = "abc467/b.rs"

[[bin]]
name = "abc467_c"
path = "abc467/c.rs"

[[bin]]
name = "abc467_d"
path = "abc467/d.rs"
